--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
     "ant-design-vue": "^1.6.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
@@ -32,6 +35,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.10.2",
     "axios": "^0.19.2",
     "vue": "^2.6.11",
     "vue-router": "^3.3.2",
